--- a/index.html
+++ b/index.html
@@ -286,6 +286,267 @@
 
 </section>
 
+<!-- TODO: react -->
+<section class="slide" id="react">
+    <figure>
+        <img class="cover h" src="pictures/react-js.png">
+    </figure>
+    <style>
+        #react h2 {
+            margin: 30px 0 0;
+            color: #FFF;
+            text-align: center;
+            font-size: 70px;
+        }
+
+        #react p {
+            margin: 10px 0 0;
+            text-align: center;
+            color: #FFF;
+            font-style: italic;
+            font-size: 20px;
+        }
+
+        #react p a {
+            color: #FFF;
+        }
+    </style>
+</section>
+
+<!-- TODO: Что такое react? -->
+<section class="slide">
+    <h2>Что такое react?</h2>
+    <p>
+        React.js - библиотека для создания пользовательского интерфейса.
+    </p>
+</section>
+
+<!-- TODO: Преимущества react -->
+<section class="slide">
+    <h2>Преимущества:</h2>
+    <ol>
+        <li class="next">Virtual DOM;</li>
+        <li class="next">Synthetic Events;</li>
+        <li class="next">Server side rendering;</li>
+        <li class="next">ECMAScript (javascript);</li>
+        <li class="next">Низкий порог вхождения;</li>
+        <li class="next">
+            Отлично подходит для командной разработки;
+        </li>
+        <li class="next">UI код читабельный и прост в сопровождении;</li>
+    </ol>
+</section>
+
+<!-- TODO: Недостатки react -->
+<section class="slide">
+    <h2>Недостатки:</h2>
+    <ol>
+        <li class="next">AJAX</li>
+        <li class="next">Routing</li>
+        <li class="next">Большой вес на выходе</li>
+        <li class="next">Component State</li>
+        <li class="next">Webpack, babel</li>
+    </ol>
+</section>
+
+<!-- TODO: lifecycle -->
+<section class="slide">
+    <h2>lifecycle:</h2>
+    <img src="pictures/react_native_lifecycle.png" style="width: 100%" alt="">
+</section>
+
+<!-- TODO: JSX - dump component -->
+<section class="slide">
+    <h2>JSX - dump component:</h2>
+    <img src="pictures/screenshot-codepen.io-2017-11-12-11-08-38-536.png" style="display: block;margin: 0 auto; width: 100%" alt="">
+</section>
+
+<!-- TODO: JSX - smart component -->
+<section class="slide">
+    <h2>JSX - smart component:</h2>
+    <img src="pictures/screenshot-codepen.io-2017-11-12-10-52-57-959.png" style="display: block;margin: 0 auto; width: 100%" alt="">
+</section>
+
+<!-- TODO: react -->
+<section class="slide" id="redux">
+    <figure>
+        <img class="cover w" src="pictures/b1f0ca88bac3491a979bad1fc1df4d75.png">
+    </figure>
+    <style>
+        #redux h2 {
+            margin: 30px 0 0;
+            color: #FFF;
+            text-align: center;
+            font-size: 70px;
+        }
+
+        #redux p {
+            margin: 10px 0 0;
+            text-align: center;
+            color: #FFF;
+            font-style: italic;
+            font-size: 20px;
+        }
+
+        #redux p a {
+            color: #FFF;
+        }
+    </style>
+</section>
+
+<!-- TODO: Что такое redux? -->
+<section class="slide">
+    <h2>Что такое redux?</h2>
+    <p>
+        Redux — это инструмент управления как состоянием данных, так и состоянием интерфейса в JavaScript-приложениях.
+    </p>
+</section>
+
+<!-- TODO: Что такое redux? -->
+<section class="slide">
+    <h2>Особенности:</h2>
+    <ol>
+        <li class="next">Единственный источник истины</li>
+        <li class="next">Состояние доступно только для чтения</li>
+        <li class="next">Изменения делаются «чистыми» функциями</li>
+    </ol>
+</section>
+
+<!-- TODO: Graphql -->
+<section class="slide" id="graphql">
+    <figure>
+        <img class="cover h" src="pictures/13cc85d7eb774a51b034485d2eb9e8d0.png">
+    </figure>
+    <style>
+        #graphql h2 {
+            margin: 30px 0 0;
+            color: #FFF;
+            text-align: center;
+            font-size: 70px;
+        }
+
+        #graphql p {
+            margin: 10px 0 0;
+            text-align: center;
+            color: #FFF;
+            font-style: italic;
+            font-size: 20px;
+        }
+
+        #graphql p a {
+            color: #FFF;
+        }
+    </style>
+</section>
+
+<!-- TODO: Что за зверь? -->
+<section class="slide">
+    <h2>Что за зверь?</h2>
+    <p>
+        Язык запросов для API который предоставляет слой абстракции между сервером и клиентом, а так же полное и
+        понятное описание данных в вашем API.
+    </p>
+</section>
+
+<!-- TODO: Кому это надо? -->
+<section class="slide">
+    <h2>Кому это надо?</h2>
+</section>
+<section class="slide">
+    <h2 class="shout shrink">Developers!</h2>
+</section>
+
+<!-- TODO: Платформы и языки для которых есть готовые решения: -->
+<section class="slide">
+    <h2>Платформы и языки для которых есть готовые решения:</h2>
+    <div style="column-count: 2;">
+        <div>C# / .NET</div>
+        <div>Clojure</div>
+        <div>Elixir</div>
+        <div>Erlang</div>
+        <div>Go</div>
+        <div>Groovy</div>
+        <div>Java</div>
+        <div>JavaScript</div>
+        <div>PHP</div>
+        <div>Python</div>
+        <div>Scala</div>
+        <div>Ruby</div>
+        <div>и т.д.</div>
+    </div>
+</section>
+
+<!-- TODO: GraphQL привносит порядок в хаос: -->
+<section class="slide">
+    <h2>GraphQL привносит порядок в хаос:</h2>
+    <ol>
+        <li class="next">Уменьшая затраты на коммуникации, меньше соединений;</li>
+        <li class="next">Единый endpoint для всех запросов с любой платформы;</li>
+        <li class="next">Frontend и Backend независимы;</li>
+        <li class="next">Не надо писать документацию</li>
+    </ol>
+</section>
+
+<!-- TODO: В кратце отличие от REST-->
+<section class="slide">
+    <h2 class="shout shrink" style="text-align: center">Отличие от REST</h2>
+</section>
+
+<!-- TODO: В кратце отличие от REST-->
+<section class="slide black">
+    <figure>
+        <img class="cover" src="pictures/1-f_XvFD7FvliMM74WHJ0vRQ.png" alt="">
+        <figcaption class="white">
+            <a href="https://dev-blog.apollodata.com/@helfer">© Jonas Helfer</a>
+        </figcaption>
+    </figure>
+</section>
+
+<!-- TODO: Пример запроса -->
+<section class="slide">
+    <h2>Пример запроса:</h2>
+    <!--<pre>-->
+    <!--<code style="    font-size: 20px;">-->
+    <!--query {-->
+    <!--users {-->
+    <!--id-->
+    <!--name-->
+    <!--}-->
+    <!--}-->
+    <!--</code>-->
+    <!--</pre>-->
+    <img style="width: 100%;display: block;" src="pictures/gql-query.png" alt="">
+</section>
+
+<!-- TODO: Пример мутации -->
+<section class="slide">
+    <h2>Пример мутации:</h2>
+    <img style="width: 100%;display: block;" src="pictures/gql-mutation.png" alt="">
+</section>
+
+<!-- TODO: Анатомия запроса -->
+<section class="slide">
+    <h2>Анатомия запроса:</h2>
+    <img src="pictures/gql-anatomy.png" alt="">
+</section>
+
+<!-- TODO: Немного практики запросов -->
+<section class="slide" id="first-practical">
+    <h2 class="shout">
+        <a href="https://goo.gl/DGoUay">Немного практики https://goo.gl/DGoUay</a>
+    </h2>
+    <style>
+        #first-practical h2 {
+            font-size: 100px
+        }
+
+        #first-practical img {
+            width: 0.72em;
+            height: 0.72em;
+        }
+    </style>
+</section>
+
 <footer class="badge">
 	<a href="https://github.com/shower/shower">Fork me on GitHub</a>
 </footer>
